# shout-to-the-world

./: .gitignore  Ahhhh.desktop  Ahhhh.sh  Ahhhhh.py  README.md  bg.py  bg_segm.cpp  build.sh  cvtest.py  freeze.py  ft2.py  install.sh  libmog2.so.100  list_mic.py  listen2.py  mog2.cpp  mog2.py  mog2000.cpp  mog3.py  snapshot.py  substract.py
bgfg/: CMakeCache.txt  CMakeLists.txt  Makefile  bgfg_segm  bgfg_segm.cpp  cmake_install.cmake
bgfg/no_blur/: merge_a_v.sh
